# RICE

./: README.md
code/: CMakeLists.txt  main.cpp
code/src/: src.hpp
code/utils/: utils.hpp
